--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
         <h1>SBA 308A JavaScript Web Application</h1>
+        <header>
+            <h1>Search Image</h1>
+            <input type="text" id="breed-search" placeholder="Search">
+            <button id="search-button">Search</button>
+        </header>
+        <main class="gallery"></main>
     <script src="script.js"></script>
 </body>
 
