--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unsplash Image Search</title>
+    <title>SBA-308A-JavaScript-Web-Application</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Unsplash Image Search</h1>
+        <h1>Search Any Image</h1>
+        <h1>I will Show You What You Need!</h1>
         <form id="search-form">
             <input type="text" id="search-input" placeholder="Search for images..." required>
             <button type="submit">Search</button>
